--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="d-flex justify-content-center">
       <div class="col-lg-6">
-        <h1 class="font-weight-bold">Login Form</h1>
+        <h2 class="font-weight-bold">Welcome to Full Stack MMA</h1>
         <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -41,6 +41,7 @@
   <!-- PIN ME TO THE BOTTOM-->
   <div class="p-3 mb-2 bg-danger text-white">
     <div class="d-flex flex-row justify-content-around">
+      <p class="text-white">Contact Us:</p>
       <a class="text-white" href="mailto:jmc846@scarletmail.rutgers.gmail.com">Jonathan Cobb</a>
       <a class="text-white" href="mailto:placeholder@email.com">Michael Chen</a>
       <a class="text-white" href="mailto:nlamonaco86@gmail.com">Nicholas La Monaco</a>
