--- a/public/signup.html
+++ b/public/signup.html
@@ -2,25 +2,26 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Sign Up</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
-    </div>
+    <!-- PIN ME TO THE TOP-->
+    <nav class="navbar bg-danger">
+    </p>
+    </p>
   </nav>
+
+  <!-- FLOAT ME IN THE CENTER -->
   <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
-        <form class="signup">
+    <div class="d-flex justify-content-center">
+      <div class="col-lg-6">
+        <h2 class="font-weight-bold">Sign Up for Full-Stack MMA</h2>
+        <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
@@ -33,11 +34,22 @@
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
-          <button type="submit" class="btn btn-default">Sign Up</button>
+          <button type="submit" class="btn-lg btn-danger">Login</button>
         </form>
         <br />
-        <p>Or log in <a href="/login">here</a></p>
+        <p>Or Log In <a href="/login" class="text-danger">here</a></p>
       </div>
+    </div>
+  </div>
+
+  <!-- PIN ME TO THE BOTTOM-->
+  <div class="p-3 mb-2 bg-danger text-white">
+    <div class="d-flex flex-row justify-content-around">
+      <p class="text-white">Contact Us:</p>
+      <a class="text-white" href="mailto:jmc846@scarletmail.rutgers.gmail.com">Jonathan Cobb</a>
+      <a class="text-white" href="mailto:placeholder@email.com">Michael Chen</a>
+      <a class="text-white" href="mailto:nlamonaco86@gmail.com">Nicholas La Monaco</a>
+      <a class="text-white" href="mailto:sbolotnikov@gmail.com">Sergey Bolotnikov</a>
     </div>
   </div>
 
