--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,8 @@
                 <video autoplay muted loop id="myVideo">
                     <source src="./imgs/mma.mov" type="video/mp4">
                 </video>
-                <h1 class="display-3">FULL STACK</h1>
-                <h1 class="display-3">Mixed Martial Arts</h1>
+                <h1 class="display-3 font-weight-bold">FULL STACK</h1>
+                <h1 class="display-3 font-weight-bold">Mixed Martial Arts</h1>
                 <h2>Master the front and back end</h2>
                 <p class="lead">Build confidence. Get in Shape.
                     Classes for adults and kids.</p>
