--- a/public/signup.html
+++ b/public/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Sign Up</title>
+  <title>Sign Up Page</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -43,9 +43,6 @@
           </li>
           <li class="nav-item mr-3 d-lg-none">
             <a class="nav-link text-light" href="#">Login</a>
-          </li>
-          <li class="nav-item mr-3 d-lg-none">
-            <a class="nav-link text-light bg-dark active" href="#">Register</a>
           </li>
           <li class="nav-item mr-3 d-none d-lg-block">
             <div class="dropdown">
