--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="./stylesheets/style.css">
+    <script src="js/login.js" defer></script>
     <title>Full Stack MMA</title>
 </head>
 
@@ -56,10 +57,10 @@
                                 Login
                             </button>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                                <form class="px-2 py-2">
+                                <form class="login px-2 py-2">
                                     <div class="form-group">
-                                        <label for="email">Email</label>
-                                        <input type="text" class="form-control" id="email"
+                                        <label for="userEmail">Email</label>
+                                        <input type="email" class="form-control" id="userEmail"
                                             aria-describedby="emailHelp">
                                     </div>
                                     <div class="form-group">
