added html hrefs

--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,10 @@
                         <a class="nav-link text-light" href="#">Contact Us</a>
                     </li>
                     <li class="nav-item mr-3 d-lg-none">
-                        <a class="nav-link text-light" href="#">Login</a>
+                        <a class="nav-link text-light" href="login.html">Login</a>
                     </li>
                     <li class="nav-item mr-3 d-lg-none">
-                        <a class="nav-link text-light" href="#">Register</a>
+                        <a class="nav-link text-light" href="signup.html">Register</a>
                     </li>
                     <li class="nav-item mr-3 d-none d-lg-block">
                         <div class="dropdown">
@@ -69,7 +69,7 @@
                                     </div>
                                     <div class="form-inline">
                                         <button type="submit" class="btn btn-danger">Login</button>
-                                        <button type="submit" class="btn btn-danger mx-2">Register</button>
+                                        <a href="signup.html" role="button" class="btn btn-danger mx-2">Register</a>
                                     </div>
                                 </form>
                             </div>
