--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,7 @@
         <ul class="navbar-nav nav-pills ml-auto">
 
           <li class="nav-item mr-3">
-            <a class="nav-link text-light" href="#">Home</a>
+            <a class="nav-link text-light" href="index.html">Home</a>
           </li>
           <li class="nav-item mr-3">
             <a class="nav-link text-light" href="#">About FS MMA</a>
