--- a/public/signup.html
+++ b/public/signup.html
@@ -9,6 +9,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="./stylesheets/style.css">
   <script src="./js/signup.js" defer></script>
+  <script src="./js/login.js" defer></script>
   <script src="./js/jquery.mask.min.js" defer></script>
 </head>
 
@@ -30,7 +31,7 @@
         <ul class="navbar-nav nav-pills ml-auto">
 
           <li class="nav-item mr-3">
-            <a class="nav-link text-light" href="#">Home</a>
+            <a class="nav-link text-light" href="index.html">Home</a>
           </li>
           <li class="nav-item mr-3">
             <a class="nav-link text-light" href="#">About FS MMA</a>
@@ -42,7 +43,7 @@
             <a class="nav-link text-light" href="#">Contact Us</a>
           </li>
           <li class="nav-item mr-3 d-lg-none">
-            <a class="nav-link text-light" href="#">Login</a>
+            <a class="nav-link text-light" href="login.html">Login</a>
           </li>
           <li class="nav-item mr-3 d-none d-lg-block">
             <div class="dropdown">
@@ -53,12 +54,12 @@
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                 <form class="px-2 py-2">
                   <div class="form-group">
-                    <label for="loginEmail">Email</label>
-                    <input type="text" class="form-control" id="loginEmail" aria-describedby="emailHelp">
+                    <label for="userEmail">Email</label>
+                    <input type="text" class="form-control" id="userEmail" aria-describedby="emailHelp">
                   </div>
                   <div class="form-group">
-                    <label for="loginPassword">Password</label>
-                    <input type="password" class="form-control" id="loginPassword" name="password" minlength="8"
+                    <label for="userPassword">Password</label>
+                    <input type="password" class="form-control" id="userPassword" name="userPassword" minlength="8"
                       required>
                   </div>
                   <div class="form-inline">
