updates to routes

--- a/public/login.html
+++ b/public/login.html
@@ -30,10 +30,10 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
-          <button type="submit" class="btn-lg btn-danger">Login</button>
+          <button type="submit" class="btn-lg btn-danger" href="/members">Login</button>
         </form>
         <br />
-        <p>Or sign up <a href="/" class="text-danger">here</a></p>
+        <p>Or sign up <a href="/members" class="text-danger">here</a></p>
       </div>
     </div>
   </div>
