--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link active bg-danger" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">About FS MMA</a>
+                    <a class="nav-link text-light" href="./members.html">About FS MMA</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#">Classes</a>
@@ -52,7 +52,7 @@
                                     <input type="password" class="form-control" id="userPassword">
                                 </div>
                                 <div class="form-inline">
-                                    <button type="submit" class="btn btn-danger">Login</button>
+                                    <button type="submit"  class="btn btn-danger" >Login</button>
                                     <button type="submit" class="btn btn-danger mx-2">Register</button>
                                 </div>
                             </form>
