--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,17 @@
                                     <input type="password" class="form-control" id="userPassword">
                                 </div>
                                 <div class="form-inline">
-                                    <button type="submit"  class="btn btn-danger" >Login</button>
-                                    <button type="submit" class="btn btn-danger mx-2">Register</button>
+
+                                    <a href='./members.html'>
+                                        <Button type='submit' class="btn btn-danger">Login</button></a>
+                                    <a href='./signup.html'>
+                                        <Button type='submit' class="btn btn-danger">Register</button></a>
+
+
+
+
+                                    <!-- <a href ='./signup.html'><button type="submit"   class="btn btn-danger"  >Login</button></a>  -->
+                                    <!-- <button type="submit" class="btn btn-danger mx-2">Register</button> -->
                                 </div>
                             </form>
                         </div>
