--- a/public/login.html
+++ b/public/login.html
@@ -30,10 +30,12 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
-          <button type="submit" class="btn-lg btn-danger" href="/members">Login</button>
+          <!-- <button type="submit" class="btn-lg btn-danger" href="/members">Login</button> -->
+          <a href='members.html'>
+          <Button type='submit' class="btn btn-danger">Login</button></a>
         </form>
         <br />
-        <p>Or sign up <a href="/members" class="text-danger">here</a></p>
+        <p>Or sign up <a href="signup.html" class="text-danger">here</a></p>
       </div>
     </div>
   </div>
