--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                                     <input type="password" class="form-control" id="userPassword">
                                 </div>
                                 <div class="form-inline">
-
+                                    <!--Change button styling to test ahref functionlity-->
                                     <a href='./members.html'>
                                         <Button type='submit' class="btn btn-danger">Login</button></a>
                                     <a href='./signup.html'>
