--- a/public/login.html
+++ b/public/login.html
@@ -36,13 +36,13 @@
             <a class="nav-link text-light" href="#">About FS MMA</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link text-light" href="#">Classes</a>
+            <a class="nav-link text-light" href="class_schedule.html">Classes</a>
           </li>
           <li class="nav-item mr-3">
             <a class="nav-link text-light" href="#">Contact Us</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link text-light" href="#">Register</a>
+            <a class="nav-link text-light" href="signup.html">Register</a>
           </li>
         </ul>
       </div>
