--- a/public/signup.html
+++ b/public/signup.html
@@ -37,7 +37,7 @@
             <a class="nav-link text-light" href="#">About FS MMA</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link text-light" href="#">Classes</a>
+            <a class="nav-link text-light" href="class_schedule.html">Classes</a>
           </li>
           <li class="nav-item mr-3">
             <a class="nav-link text-light" href="#">Contact Us</a>
