updated to links #4

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                     <a class="nav-link text-light" href="#">Classes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Contact Us</a>
+                    <a class="nav-link text-light" href="./signup.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
                     <div class="dropdown">
@@ -53,13 +53,10 @@
                                 </div>
                                 <div class="form-inline">
                                     <!--Change button styling to test ahref functionlity-->
-                                    <a href='./members.html'>
+                                    <a href="./members.html">
                                         <Button type='submit' class="btn btn-danger">Login</button></a>
                                     <a href='./signup.html'>
                                         <Button type='submit' class="btn btn-danger">Register</button></a>
-
-
-
 
                                     <!-- <a href ='./signup.html'><button type="submit"   class="btn btn-danger"  >Login</button></a>  -->
                                     <!-- <button type="submit" class="btn btn-danger mx-2">Register</button> -->
