--- a/public/class_schedule.html
+++ b/public/class_schedule.html
@@ -35,13 +35,13 @@
                 <ul class="navbar-nav nav-pills ml-auto">
 
                     <li class="nav-item mr-3">
-                        <a class="nav-link active bg-danger" href="#">Home</a>
+                        <a class="nav-link text-light" href="index.html">Home</a>
                     </li>
                     <li class="nav-item mr-3">
                         <a class="nav-link text-light" href="#">About FS MMA</a>
                     </li>
                     <li class="nav-item mr-3">
-                        <a class="nav-link text-light" href="#">Classes</a>
+                        <a class="nav-link active bg-danger" href="#">Classes</a>
                     </li>
                     <li class="nav-item mr-3">
                         <a class="nav-link text-light" href="#">Contact Us</a>
