changes to class schedule route

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link text-light" href="./members.html">About FS MMA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Classes</a>
+                    <a class="nav-link text-light" href="./class_schedule.html">Classes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="./signup.html">Contact Us</a>
