--- a/public/login.html
+++ b/public/login.html
@@ -59,11 +59,11 @@
     <form class="login">
       <div class="form-group">
         <label for="userEmail">Email</label>
-        <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp">
+        <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" required>
       </div>
       <div class="form-group">
         <label for="userPassword">Password</label>
-        <input type="password" class="form-control" id="userPassword">
+        <input type="password" class="form-control" id="userPassword" required>
       </div>
 
       <button type="submit" class="btn btn-danger" id="loginBtn">Login</button>
