--- a/public/class_schedule.html
+++ b/public/class_schedule.html
@@ -84,29 +84,30 @@
 
     <main class="container">
         <h1 class="text-light">Class Schedule for <span id="currentMonth"></span></h1>
-       <table class="table table-bordered text-light">
-           <thead>
-               <tr>
-                   <th scope="col"></th>
-                   <th scope="col" id="day0"></th>
-                   <th scope="col" id="day1"></th>
-                   <th scope="col" id="day2"></th>
-                   <th scope="col" id="day3"></th>
-                   <th scope="col" id="day4"></th>
-                   <th scope="col" id="day5"></th>
-                   <th scope="col" id="day6"></th>
-               </tr>
-           </thead>
-           <tbody class="schedule">
-               
-           </tbody>
-       </table>
+        <div class="table-responsive">
+            <table class="table table-bordered text-light">
+                <thead>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col" id="day0"></th>
+                        <th scope="col" id="day1"></th>
+                        <th scope="col" id="day2"></th>
+                        <th scope="col" id="day3"></th>
+                        <th scope="col" id="day4"></th>
+                        <th scope="col" id="day5"></th>
+                        <th scope="col" id="day6"></th>
+                    </tr>
+                </thead>
+                <tbody class="schedule">
 
+                </tbody>
+            </table>
+        </div>
     </main>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
