updated models and api routes

--- a/public/members.html
+++ b/public/members.html
@@ -51,7 +51,7 @@
     </nav>
   </header>
 
-  <main class="container">
+  <main class="container-lg">
     <div class="row">
       <div class="col col-lg-5">
         <div class="card mt-4">
