updated kick.js with name variable

--- a/public/members.html
+++ b/public/members.html
@@ -79,7 +79,7 @@
             My Kicks
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Full Stack MMA Kicks Message Board</a></li>
+            <li class="list-group-item"><a href="kicks.html">Full Stack MMA Kicks Message Board</a></li>
           </ul>
         </div>
        </div>
