--- a/public/members.html
+++ b/public/members.html
@@ -143,7 +143,25 @@
 
   </main>
 
-
+<!-- Modal -->
+<div class="modal fade" id="exceededLimitModal" tabindex="-1" aria-labelledby="exceededLimitModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        The number of in person students have reached the maximum allowed per COVID rules and regulartions for this class. 
+        Please select another class or request a Zoom class.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
