--- a/public/kicks.html
+++ b/public/kicks.html
@@ -56,11 +56,6 @@
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
                         <h2 class="cool-font">Kicks</h2>
-                        <script id="example-template" type="text/x-handlebars-template">
-                            {{#each people}}
-                              <p>{{firstName}} {{lastName}}</p>                        
-                            {{/each}}                          
-                        </script>
                         <hr>
                         <div id="kicks-area"></div>                       
                     </div>
@@ -82,6 +77,15 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="./js/kick.js"></script>
+    <script id="example-template" type="text/x-handlebars-template">                       
+        {{#each kicks}}
+        <div class="kick">
+          <p>{{name}}</p>
+          <p>{{message}}</p>
+          <p>{{time}}</p> 
+        </div>                    
+        {{/each}}                          
+    </script>
 </body>
 
 </html>
