--- a/public/kicks.html
+++ b/public/kicks.html
@@ -5,14 +5,16 @@
     <title>Kicks Chat</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    
     <!-- Moment.js -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
     <!-- handlebars.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
-    <link href="./stylesheets/style.css" rel="stylesheet">
-    <link href="./stylesheets/kicks_style.css" rel="stylesheet">
+    <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="stylesheet" href="./stylesheets/kicks_style.css">
+    <script type="text/javascript" src="./js/kick.js" defer></script>
 </head>
 
 <body>
@@ -40,7 +42,7 @@
                     <div class="col-sm-8 col-sm-offset-2">
                         <br>
                         <input type="text" class="form-control" id="topic" placeholder="Add new topic">
-                        <button id="topicAdd" class="btn btn-lg pull-right">Add</button>
+                        <button id="topicAdd" class="btn btn-danger" style="margin-left: 10px;">Add</button>
                         <br>
                         <p class="cool-font" for="topics">Choose a Topic:</p>
                         <figure id="topicChoice"></figure>
@@ -49,13 +51,13 @@
                         <p class="cool-font">Kick</p>
                         <textarea class="form-control" rows="3" id="kick-box"
                             placeholder="Enter your Kick Here!"></textarea>
-                        <button id="kick-submit" class="btn btn-lg pull-right">Submit!</button>
+                        <button id="kick-submit" class="btn btn-danger" style="margin-left: 10px;">Submit!</button>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
-                        <h2 class="cool-font">Kicks</h2>
+                        <h2 class="cool-font">Kicks list:</h2>
                         <hr>
                         <div id="kicks-area"></div>                       
                     </div>
@@ -74,9 +76,27 @@
             <a class="text-white" href="mailto:sbolotnikov@gmail.com">Sergey Bolotnikov</a>
         </div>
     </div>
+ <!-- Modal -->
+ <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="./js/kick.js"></script>
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" style="text-align: left; "></h5>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <h3 id="alertText"></h3>
+                <img src="./imgs/Zid2.gif" alt="Attention!" style="float: right; width:40%"> 
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
     <script id="example-template" type="text/x-handlebars-template">                       
         {{#each kicks}}
         <div class="kick">
@@ -86,6 +106,14 @@
         </div>                    
         {{/each}}                          
     </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
