--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="stylesheets/style.css" rel="stylesheet">
-  <script src="js/login.js" defer></script>
+  <script src="./js/login.js" defer></script>
 
 </head>
 
@@ -71,7 +71,27 @@
     </form>
   </main>
 
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog">
 
+      <!-- Modal content-->
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" style="text-align: left; "></h5>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+          <div class="modal-body">
+              <h3 id="alertText"></h3>
+              <img src="./imgs/Zid2.gif" alt="Attention!" style="float: right; width:40%"> 
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          </div>
+      </div>
+
+  </div>
+</div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
