--- a/public/login.html
+++ b/public/login.html
@@ -72,26 +72,7 @@
   </main>
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" role="dialog">
-  <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title" style="text-align: left; "></h5>
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-          </div>
-          <div class="modal-body">
-              <h3 id="alertText"></h3>
-              <img src="./imgs/Zid2.gif" alt="Attention!" style="float: right; width:40%"> 
-          </div>
-          <div class="modal-footer">
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-          </div>
-      </div>
-
-  </div>
-</div>
+<div class="modal fade" id="myModal" role="dialog"></div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
