--- a/public/signup.html
+++ b/public/signup.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./stylesheets/style.css">
   <script src="./js/signup.js" defer></script>
   <script src="./js/login.js" defer></script>
+  <script src="./js/commonFunctions.js" defer></script>
   <script src="./js/jquery.mask.min.js" defer></script>
 </head>
 
@@ -138,26 +139,7 @@
   </main>
 
   <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" style="text-align: left; "></h5>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-        <div class="modal-body">
-          <h3 id="alertText"></h3>
-          <img src="./imgs/Zid2.gif" alt="Attention!" style="float: right; width:40%">
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-
-    </div>
-  </div>
+  <div class="modal fade" id="myModal" role="dialog"></div>
 
 
 
