--- a/public/signup.html
+++ b/public/signup.html
@@ -53,7 +53,7 @@
                 Login
               </button>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                <form class="px-2 py-2">
+                <form class="login px-2 py-2">
                   <div class="form-group">
                     <label for="userEmail">Email</label>
                     <input type="text" class="form-control" id="userEmail" aria-describedby="emailHelp">
@@ -131,6 +131,11 @@
         <small id="passwordHelpBlock" class="form-text text-muted">
           Password should be at least 8 characters and include at least one number and at least one Uppercase character
         </small>
+        <div class="form-group">
+          <label for="confirmPassword">Confirm Password:</label>
+          <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" minlength="8"
+            required>
+        </div>
       </div>
 
       <button type="submit" class="btn btn-danger" id="registerBtn">Register</button>
