some front end styling

--- a/public/class_schedule.html
+++ b/public/class_schedule.html
@@ -23,7 +23,7 @@
             <a class="navbar-brand" href="#">
                 <img src="./imgs/martial-arts-square.png" width="100" height="100" class="d-inline-block align-middle"
                     alt="FS MMA logo" loading="lazy">
-                <h1 class="d-inline align-middle">FS MMA</h1>
+                <h1 class="d-inline align-middle display-4">FS MMA</h1>
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
@@ -82,8 +82,8 @@
         </nav>
     </header>
 
-    <main class="container">
-        <h1 class="text-light">Class Schedule for <span id="currentMonth"></span></h1>
+    <main class="container myShadow">
+        <h1 class="text-light display-4 font-weight-bold">Class Schedule for <span id="currentMonth"></span></h1>
         <div class="table-responsive">
             <table class="table table-bordered text-light">
                 <thead>
