--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             <a class="navbar-brand" href="#">
                 <img src="./imgs/martial-arts-square.png" width="100" height="100" class="d-inline-block align-middle"
                     alt="FS MMA logo" loading="lazy">
-                <h1 class="d-inline align-middle">FS MMA</h1>
+                <h1 class="d-inline align-middle display-4">FS MMA</h1>
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
