formart of congtainers

--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -96,13 +96,13 @@
   <hr class='break'> </hr>
 
 
-            <!-- </div>
+             </div>
           </div>
 
         </div>
       </div>
     </body>  
-
+    <hr class='break'> </hr>
     
     <div class="valign-wrapper">
       <div class="container">
@@ -115,11 +115,13 @@
               <div class="card-content">
                 <p>Interactive  student class schedule interface with Color-coded time Blocks!!</p>
               </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
+              <!-- <div class="card-action"> -->
+ 
               </div>
             </div>
           </div>
+          <hr class='break'> </hr>
+
           <div class="col s12 m3">
             <div class="card">
               <div class="card-image">
