--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -90,7 +90,7 @@
           <div class="text-light align-middle">
 
                <h1> See the Features of MMA APP</h1>
-<p> This page serves to show the many features of the app, for those for many desire a quick tutorial. Below you if find videos and snap these features. Once you
+<p> This page serves to show the many features of the app, for those that may desire a quick tutorial. Below you will find videos and snap these features. Once you
   have made yourself more familiar with the functionality, feel free to log in.
 </p>
   <hr class='break'> </hr>
@@ -126,12 +126,13 @@
             <div class="card">
               <div class="card-image">
                 <img src="https://media.giphy.com/media/XHd1pR8JWnZxz0p0IH/giphy.gif" class="responsive-img">
-              </div>
+               </div>
               <div class="card-content">
                 <p>Captivating Home page, complete with theme related video.</p>
               </div>
               </div>
               <hr class='break'> </hr>
+
               <div class="col s12 m3">
                 <div class="card">
                   <div class="card-image">
@@ -140,4 +141,19 @@
                   <div class="card-content">
                     <p>Interactive instructor scheduling interfaces.</p>
                   </div>
+                  </div>
                   <hr class='break'> </hr>
+
+                  <div class="col s12 m3">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="https://media.giphy.com/media/L0xBmv6J1GvISPlSfR/giphy.gif" class="responsive-img">
+                      </div>
+                      <div class="card-content">
+                        <p>Functional Messaging feature "KICK", Not to be confused with "KIK".</p>
+                      </div>
+                      </div>
+                      <hr class='break'> </hr>
+
+                  
+                  
