fixed added user age in json response from /api/user_data, fixed login in html files by adding commonFunctions.js links

--- a/public/class_schedule.html
+++ b/public/class_schedule.html
@@ -8,6 +8,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="./stylesheets/style.css">
     <script src="./js/login.js" defer></script>
+    <script src="./js/commonFunctions.js" defer></script>
     <script src="./js/classSchedule.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <title>Full Stack MMA</title>
