--- a/public/login.html
+++ b/public/login.html
@@ -9,6 +9,8 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="stylesheets/style.css" rel="stylesheet">
   <script src="./js/login.js" defer></script>
+  <script src="./js/commonFunctions.js" defer></script>
+
 
 </head>
 
